# openflightplan

./: .gitignore  .nano.swp  404.html  CNAME  CONTRIBUTING.md  OpenFlightPlan App.py  README.md  SECURITY.md  app. py  app.py  app.py.save  app.py.save.1  app.pyt=  app.pyt=.save  contact_section.py  dji_export.py  drone_specs.py  drtgf'  flight_calculator.py  flight_path_20250423_225727.kmz  flight_path_20250423_225736.kmz  flight_path_20250512_133101.kmz  flight_path_20250512_133108.kmz  flight_path_20250512_133110.kmz  flight_path_20250512_140720.kmz  flight_path_20250512_140727.kmz  flight_path_20250512_140729.kmz  flight_path_20250512_140730.kmz  flight_path_20250512_140934.kmz  flight_path_20250512_140935.kmz  flight_path_20250512_140936.kmz  index.html  inquiries.db  main.py  map_utils.py  mkdocs.yml  nohup.out  package-lock.json  pyproject.toml  replit.nix  (+3 more)
CONTRIBUTING/: index.html
developer-guide/: index.html
docs/: CONTRIBUTING.md  codebase_overview.md  developer-guide.md  flight-parameters.md  getting-started.md  index.md  license.md  mobile.md  using-the-app.md
docs/stylesheets/: extra.css
exports/: flight_plan_20250516_231602.csv  flight_plan_20250516_231602.kml  flight_plan_20250516_231602.kmz
getting-started/: index.html
license/: index.html
logs/: exports.csv
mobile/: index.html
pages/: 2_Tutorials - How to Use the App.py  3_Docs - Specs & Integration.py  4_About - Report Bugs & Contact.py  5_Credit & License.py  6_Codebase_Overview.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
using-the-app/: index.html
(+9 files in other folders)
