[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "numpy>=2.2.3",
    "plotly>=6.0.0",
    "shapely>=2.0.7",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.42.2",
    "twilio>=9.4.6",
    "simplekml>=1.3.6",
    "pyproj>=3.7.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
